@@ -3,6 +3,7 @@ package br.com.projetos3.visita.infra;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.LocaleResolver;
+import java.time.Duration;
 import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.web.servlet.i18n.CookieLocaleResolver;
@@ -14,11 +15,10 @@ public class I18nConfig implements WebMvcConfigurer {
 
     @Bean
     public LocaleResolver localeResolver() {
-        CookieLocaleResolver clr = new CookieLocaleResolver();
-        // MUDANÇA AQUI: Sendo mais específico sobre o locale
-        clr.setDefaultLocale(new Locale("pt", "BR"));
-        clr.setCookieName("visita-lang");
-        clr.setCookieMaxAge(60*60*24*180); // 180 dias
+        CookieLocaleResolver clr = new CookieLocaleResolver("visita-lang");
+        // MUDANÇA AQUI: Usando of() para criar o Locale
+        clr.setDefaultLocale(Locale.of("pt", "BR"));
+        clr.setCookieMaxAge(Duration.ofDays(180));
         return clr;
     }
 
